<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/section_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sectionFlag"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/sectionFlag"
                android:layout_width="53dp"
                android:layout_height="43dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47"
                app:srcCompat="@drawable/spain"
                android:contentDescription="@string/flag_of_language" />

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="48dp"
                android:layout_height="52dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="55dp"
                android:layout_height="53dp"
                android:src="@drawable/ic_trash_delete"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.461"
                android:contentDescription="@string/delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>