<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="120dp"
    android:layout_gravity="end"
    android:layout_marginTop="500dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/popupbackground">


    <Button
        android:id="@+id/popup_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"
        android:text="@string/save_section_name" />

    <Spinner
        android:id="@+id/spinner_countries"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/appName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_section_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/section_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:importantForAutofill="no" />
</RelativeLayout>