<resources>
    <string name="appName">ShareLook</string>
    <string name="greet">Greet</string>
    <string name="speak">Speak</string>
    <string name="textToSpeechHint">Enter your text here</string>
    <string name="textToSpeechRate">Speech rate</string>
    <string name="textToSpeechLanguage">Language</string>
    <string name="nameHint">Name</string>
    <string name="textToSpeechButtonText">Text to speech</string>
    <string name="pitchTextToSpeech">Pitch</string>
    <string name="name">Name</string>
    <string name="close_dialog">ok</string>
    <string name="greetingString">Default Name Showing String: this should not be visible</string>
    <string name="source_text_hint">Enter text to translate…</string>
    <string name="translation_running">Translation…</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="switch_arrow"><![CDATA[<->]]></string>
    <string name="speech_recognition">Speech recognition</string>
    <string name="start_speech_recognition">Start speech recognition</string>
    <string name="the_result_of_the_speech_recognition_will_appear_here">The result of the speech recognition will appear here</string>
    <string name="loginFailedString">Login has failed for some reason</string>
    <string name="title_activity_database_view">DatabaseViewActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="database">Database</string>
    <string name="sendButton">send to database</string>
    <string name="default_database_content">Default Database Content: database not yet reached</string>
    <string name="switch_languages">Switch languages</string>
    <string name="menu">menu</string>
    <string name="downloading_languages">downloading languages…</string>
    <string name="listen">Listen</string>
    <string name="sectionsButtonName">Sections</string>
    <string name="translateButtonName">Translate</string>
    <string name="unrecognized_source_language">Source language unrecognized.</string>
    <string name="need_to_download_source_language">You need to download this language : %s</string>
    <string name="no_user">John Doe</string>
    <string name="testuser_gmail_com">testuser@gmail.com</string>
    <string name="take_picture">"Take a picture"</string>
    <string name="take_picture_description">"Description"</string>
    <string name="search">Search…</string>
    <string name="section_name_hint">Section name</string>
    <string name="word_image">Image</string>
    <string name="no_result_found">no result found</string>
    <string name="save_section_name">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up !</string>
    <string name="login">LogIn</string>
    <string name="no_account_prompt_signup">Don\'t have an account? Sign up here !</string>
    <string name="add_a_section">add a section</string>
    <string name="section_name">Section name</string>
    <string name="flag_of_language">flag_of_language</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_text_detected">No Text</string>
    <string name="detect_text">Detect</string>
>>>>>>>>> Temporary merge branch 2
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="loading">Loading…</string>
    <string name="start">Start</string>
    <string name="start_10">Start (10)</string>
    <string name="start_all">Start (All)</string>
    <string name="pick_number">Pick a number</string>
    <string name="quality0">Wrong</string>
    <string name="quality1">Forgot</string>
    <string name="quality2">Not Sure</string>
    <string name="quality3">Okay</string>
    <string name="quality4">Low Difficulty</string>
    <string name="quality5">No Difficulty</string>
    <string name="help">Help</string>
    <string name="max_0">Max: 0</string>
    <string name="words_to_quiz">Number of words available for review in this section</string>
</resources>