package com.github.sdpsharelook.authorization

import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.Test
import org.junit.runner.RunWith

//class MockFirebaseAuth(p0: FirebaseApp, p1: Provider<*>) : FirebaseAuth(p0, p1)
//object UserConstants {
//    const val TEST_USER_EMAIL = "testuser@gmail.com"
//    const val TEST_USER_PASS = "123456"
//}

@RunWith(AndroidJUnit4::class)
class LoginSignUpTest {
    @Test
    fun empty() {

    }

//    @Before
//    fun logOut() {
//        auth = TestAuth()
//        auth.signOut()
//    }
//
//    @Test
//    fun testLoginWithTestUser() {
//        val scenario = launchFragmentInContainer<LoginFragment>(Bundle(), R.style.Theme_Sherlook)
//        onView(withId(R.id.email)).perform(typeText(TEST_USER_EMAIL))
//        onView(withId(R.id.password)).perform(typeText(TEST_USER_PASS))
//        onView(withId(R.id.loginButton)).perform(click())
//        assert(auth.currentUser!!.email == TEST_USER_EMAIL)
//        scenario.close()
//    }
//
//    @Test
//    fun testLoginWithNoEmail() {
//        launchFragmentInContainer<LoginFragment>(Bundle(), R.style.Theme_Sherlook)
//        onView(withId(R.id.loginButton)).perform(swipeLeft())
//        onView(withId(R.id.email)).perform(typeText(""))
//        onView(withId(R.id.password)).perform(typeText(TEST_USER_PASS))
//        onView(withId(R.id.loginButton)).perform(click()).also {
//            assert(auth.currentUser == null)
//        }
//
//    }
}